--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@
         display: block;
         align-items: center;
         margin-bottom: 1rem;
+        margin-left: 3rem;
     }
     .contact-us{
         display: block;
@@ -143,10 +144,11 @@
     margin-left: auto;
     margin-right: auto;
     }
-    .formm{
+    .contact-us form{
         display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 300px;
     }
   
         
